syntax = "proto3";
import "google/protobuf/any.proto";

service AuthService {
    rpc CreateToken (ICreateToken) returns (IToken) {}
    rpc VerifyToken (IVerifyToken) returns (IAuthorizationObj) {}
}

message ICreateToken {
    required string deviceid = 1;
    required string devicetype =2;
    required string tokenType = 3;
    optional string id = 4;
    optional IAuthCred authCred = 5;
}

message IAuthCred {
    required string username = 1;
    required string password =2;
}

message IToken {
    string token = 1;
}

message IVerifyToken {
    required string token = 1;
}

message IAuthorizationObj {
    required string tokenType = 1;
    required string deviceid = 2;
    required string devicetype = 3;
    optional string id = 4;
    optional IUserData userData = 5;
}

message IUserData {
    required string  id = 1;
    required string name = 2;
    required string cCode = 3;
    required string phnNo = 4;
    required int32 phnVerified = 5;
    required string email = 6;
    required int32 emailVerified = 7;
    required int32 profileStep = 8;
    required string socialKey = 9;
    required string medium = 10;
    required int32 createdAt = 11;
    optional string removeUserId = 12;
    optional Any address = 13;
}
